--- a/scss/help/background.scss
+++ b/scss/help/background.scss
@@ -1,12 +1,52 @@
 .background{
-  &__circle--big{
-    position: absolute;
-    width: 1253px;
-    height: 1253px;
-    right: -55%;
-    top: -50%;
+  &__circle{
+    &--big{
+      position: absolute;
+      width: 1253px;
+      height: 1253px;
+      top: 0;
+      right: 0;
+      transform: translate(55%, -50%);
+  
+      background-color: #BAABDA;
+      filter: blur(715px);
+    }
 
-    background-color: #BAABDA;
-    filter: blur(715px);
+    &--big2{
+      position: absolute;
+      top: 0;
+      left: 0;
+      transform: translate(-10%, -20%);
+      width: 758px;
+      height: 758px;
+
+      background: #FEC7D7;
+      filter: blur(382px);
+    }
+
+    &--big3{
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      transform: translateX(-50%) translateY(50%);
+      width: 485px;
+      height: 485px;
+
+      background: #7747FF;
+      filter: blur(468px);
+    }
+
+    &--medium{
+      position: absolute;
+      width: 445px;
+      height: 445px;
+      top: 50%;
+      transform: translateY(-50%);
+      right: -40%;
+
+      background-color: #FEC7D7;
+
+      filter: blur(237px);
+    }
   }
 }
