--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,7 @@ $font-Mariupol-Regular: "Mariupol-Regular";
 $font-Mariupol-Medium: "Mariupol-Medium";
 $font-Mariupol-Bold: "Mariupol-Bold";
 
-$textcolor: #555555;
+$textcolor: #2c2c2c;
 $whitecolor: #FFFFFF;
 $purplecolor: #8175FE;
 
@@ -55,15 +55,15 @@ html{
     height: 100%;
     scroll-behavior: smooth;
 
-    ::-webkit-scrollbar {
+    &::-webkit-scrollbar {
         width: 11px;
     }
     
-    ::-webkit-scrollbar-track {
+    &::-webkit-scrollbar-track {
         background-color: $scrollBarColor;
     }
     
-    ::-webkit-scrollbar-thumb {
+    &::-webkit-scrollbar-thumb {
         background-color: $scrollThumbColor;
         border-radius: 50px;
         border: 3px solid #fff;
@@ -74,8 +74,7 @@ body{
     color: $textcolor;
     font-family: $font-Mariupol-Regular;
     margin: 0;
-    height: 1000px;
-    -webkit-tap-highlight-color: transparent;
+    height: 100%;
     
     &.lock{
         @media (max-width: $tablet + px) {
@@ -95,7 +94,7 @@ body{
 }
 
 .main{
-    flex: 1 1 100%;
+    flex: 1 1 auto;
 }
 
 .container{
@@ -108,6 +107,7 @@ body{
     // blocks
 @import "blocks/header.scss";
 @import "blocks/footer.scss";
+@import "blocks/main.scss";
     // pages
 @import "pages/mainpage.scss";
     // help
